Add explicit bullets to Nuclear Family / Country box

--- a/index.html
+++ b/index.html
@@ -557,13 +557,13 @@
                      <h2>👨‍👩‍👧 Nuclear Family / Country</h2>
                      <div class="coordinates-display">(1368, 1895)</div>
                  </div>
-                 <div class="box-content">
-                     <ul>
-                         <li>More programmers / CS degrees needed</li>
-                         <li>They will fill AI Engineer roles (Learning AI System Design)</li>
-                     </ul>
-                 </div>
-             </div>
+                <div class="box-content">
+                    <ul>
+                        <li>• More programmers / CS degrees needed</li>
+                        <li>• They will fill AI Engineer roles (Learning AI System Design)</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
